# Icewall

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  scan2_progress.txt  scan_progress.txt
examples/vulnerable_app/: app.py  server.js  utils.py
icewall/: __init__.py  __main__.py  cli.py  config.py  cost.py  engine.py  memory.py  schemas.py  workshop.py
icewall/agents/: __init__.py  analyzer.py  base.py  remediator.py  summarizer.py  tracer.py  triage.py  validator.py
icewall/detectors/: __init__.py  patterns.py
icewall/graph/: __init__.py  builder.py  code_graph.py  languages.py  parser.py  view.py
icewall/knowledge/: __init__.py  bm25.py  builder.py  cvefixes.py  distill.py  embed.py  fetch.py  osv_bulk.py  schema.py  store.py
icewall/orchestration/: __init__.py  budget.py  context.py  context_manager.py  pools.py  store.py  trace.py
icewall/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  mock.py  openai_provider.py
icewall/report/: __init__.py  markdown.py  sarif.py
icewall/sensors/: __init__.py  base.py
icewall/skills/: __init__.py  loader.py
icewall/ui/: __init__.py  kb_runner.py  presets.py  runner.py  server.py
icewall/ui/static/: app.js  index.html  style.css
tests/: test_knowledge.py  test_pipeline.py  test_skills.py  test_ui.py
